objects/ianb__RecipientGroupMember__c.object
<CustomObject>
    <description>An individual forming part of a Recipient Group</description>
    <fields>
        <fullName>ianb__MemberId__c</fullName>
        <label>Member Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ianb__RecipientGroup__c</fullName>
        <label>Recipient Group</label>
        <referenceTo>ianb__RecipientGroup__c</referenceTo>
        <relationshipLabel>Recipient Group Members</relationshipLabel>
        <relationshipName>RecipientGroupMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ianb__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Role and Subordinates</fullName>
                </value>
                <value>
                    <fullName>Recipient Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recipient Group Member</label>
    <nameField>
        <label>Recipient Group Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>